SECRET NOTES:
- You can ctrl-click a puzzle to solve it immediately if your save data gets replaced or something.

2/26/2015

- Made puzzles for block 9 (some are already bugged lol)
- Fixed an issue with potions/shifters
- Setting up a thing where you rate a puzzle's difficulty so I can like know what puzzles are 2 ez/hard

2/24/2015 

- Implemented & drew potions/poisons
- Tutorial puzzles made
- Added 'difficulty rating' buttons after each puzzle. This isn't a permanent thing or anything. It does nothing right now.

2/23/2015

- Added a changelog (this, lol)
- Fixed a bug where you could overwrite a horizontal mirror with an item
- Added a naming/id scheme to each puzzle to make them easier for me to identify
- 6-B had 10 shots when it should have had 1
- 7-C was missing a black space
- 7-I changed significantly
- 7-E changed significantly
- Added colors for tiers thing